Use placeholder avatar by default to avoid 404 and improve live appearance

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       </div>
 
       <div class="hero-avatar">
-        <!-- Profile photo: place your file at /assets/profile.jpg to use it. The img has a fallback to an initials SVG. -->
-        <img id="profile-photo" class="avatar-img" src="/assets/profile.jpg" alt="Photo of Abdulmonem Elsherif" onerror="this.onerror=null;this.src='/assets/profile-placeholder.svg'" />
+        <!-- Profile photo: using placeholder by default; place /assets/profile.jpg if you want a photo -->
+        <img id="profile-photo" class="avatar-img" src="/assets/profile-placeholder.svg" alt="Photo of Abdulmonem Elsherif" />
         <a class="avatar-link" href="https://www.linkedin.com/in/abdulmonem-elsherif/" target="_blank" rel="noopener">View on LinkedIn</a>
       </div>
     </section>
